# search_submit_max

./: .gitignore  .json  .typ  Cargo.toml  application.yaml  delete_code.js  process.txt  submit_code.js  tmp  todo
helper/: 1.typ  delete_code.js
logs/: failed_questions.2026-01-18  failed_questions.2026-01-28  failed_questions.2026-01-29  failed_questions.2026-01-30  failed_questions.2026-01-31  failed_questions.2026-02-01  output.json  search_submit.2026-01-17  search_submit.2026-01-18  化学23  化学古早.2026-01-28
output_toml/: 2025年辽宁省阜新市第二十六中学中考数学零模试卷.toml  上海市松江区2025-2026学年上学期九年级一模数学试卷.toml  专题01 实数的概念及运算（6大题型43题）（甘肃专用）-【好题汇编】2025年中考数学一模试题分类汇编.toml  专题02方程（组）与不等式（组）（14题型）（山东专用）-【好题汇编】2025年中考数学一模试题分类汇编.toml  广西壮族自治区柳州市2026年九年级第一次模拟联合考数学试卷.toml
src/: main.rs
src/api/: base64_to_img.rs  mod.rs  send_request.rs  submit.rs  submit_paper.rs
src/api/llm/: image_merger.rs  message_builder.rs  mod.rs  service.rs  tests.rs
src/api/loaders/: convert.rs
src/api/search/: k12.rs  mod.rs  xueke.rs
src/api/upload/: batch.rs  get_credential.rs  img.rs  mod.rs  pdf.rs
src/app/: base64_decode.rs  data_subject.rs  grade.rs  logger.rs  mod.rs  models.rs
src/app/workflow/: mod.rs  pipeline.rs
src/app/workflow/process_single/: build_ques_llm.rs  mod.rs  result.rs  search.rs  upload.rs  zhuguan.rs
src/config/: mod.rs
